# growth-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/growth_copilot/: __init__.py  api.py  catalog.py  cli.py  config.py  grounding.py  llm.py  prompts.py
src/growth_copilot/domain/: __init__.py  state.py  tasks.py
src/growth_copilot/graph/: __init__.py  binding.py  build.py  drilldown.py  nodes.py  scheduler.py
src/growth_copilot/resources/: catalog.json
src/growth_copilot/resources/prompts/: planner.md  synthesize.md  triage.md
src/growth_copilot/resources/recipes/: conversion-blockers.json  upgrade-paths.json  weekly-health.json
src/growth_copilot/warehouse/: __init__.py  analytics.py  compare.py  db.py  metadata.py  repository.py  seed.py
tests/: conftest.py  test_api.py  test_binding.py  test_checkpointing.py  test_drilldown.py  test_graph_offline.py  test_grounding.py  test_recipes.py  test_scheduler.py  test_warehouse.py
