[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "growth-copilot"
version = "0.1.0"
description = "A LangGraph multi-agent orchestrator that turns plain-English product-analytics questions into auditable, dependency-aware task graphs executed against an embedded DuckDB warehouse."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Syed Hassaan Saleem", email = "saleemhassaan94@gmail.com" }]
keywords = ["langgraph", "langchain", "agents", "analytics", "duckdb", "llm-orchestration"]
dependencies = [
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=1.0,<2",
    "langchain-anthropic>=1.0,<2",
    "duckdb>=1.1",
    "pandas>=2.2",
    "pydantic>=2.9",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
growth-copilot = "growth_copilot.cli:app"

[project.urls]
Homepage = "https://github.com/HassaanSaleem/growth-copilot"
Repository = "https://github.com/HassaanSaleem/growth-copilot"

[tool.hatch.build.targets.wheel]
packages = ["src/growth_copilot"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer's idiom is function calls in argument defaults
"src/growth_copilot/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
